# quartz-sonic

./: Cargo.toml  LICENSE.md  README.md  build.rs  qs.deb
.github/workflows/: build-deb.yml
debian/: postinst  postrm  quartz-sonic.service
proto/quartzcommand/device/v1/: device.proto
proto/quartzcommand/enrollment/v1/: enrollment.proto
scripts/: build-deb.sh  install.sh  uninstall.sh
src/: main.rs  state.rs
src/cli/: mod.rs
src/control/: daemon.rs  mod.rs  tls.rs
src/enrollment/: mock_tests.rs  mod.rs  token.rs
src/identity/: deviceid.rs  mod.rs
src/sonic/: aaa.rs  acl.rs  bfd.rs  bgp.rs  dhcprelay.rs  fdb.rs  igmp.rs  isis.rs  l3.rs  lldp.rs  mclag.rs  mgmtapi.rs  mirror.rs  mod.rs  ospf.rs  policy.rs  probe.rs  qos.rs  sflow.rs  staticroutes.rs  stats.rs  store.rs  stormcontrol.rs  stp.rs  switching.rs  system.rs  telemetry.rs  vrrp.rs  vxlan.rs
